force-app/main/default/objects/Google_Drive_File__c/Google_Drive_File__c.object-meta.xml
<CustomObject>
    <label>Google Drive File</label>
    <nameField>
        <displayFormat>GDF-{0}</displayFormat>
        <label>Google Drive File ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Drive Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>