force-app/main/default/objects/Google_Drive_File__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>