force-app/main/default/objects/Google_Drive_File__c/fields/Google_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_File_Id__c</fullName>
    <externalId>true</externalId>
    <label>Google File ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>