force-app/main/default/objects/Google_Drive_File__c/fields/Google_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Google_Modified_Date__c</fullName>
    <label>Google Modified Date</label>
    <type>DateTime</type>
</CustomField>