force-app/main/default/objects/Google_Drive_File__c/fields/Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Date__c</fullName>
    <label>Last Processed Date</label>
    <type>DateTime</type>
</CustomField>