force-app/main/default/objects/Google_Drive_File__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Google Drive Files</relationshipLabel>
    <relationshipName>Google_Drive_Files</relationshipName>
    <type>Lookup</type>
</CustomField>